tests/compilation/examples/fail_error.stderr
error: failed
 --> tests/compilation/examples/fail_error.rs:3:1
  |
3 | #[error]
  | ^^^^^^^^
  |
  = note: this error originates in the attribute macro `error` (in Nightly builds, run with -Z macro-backtrace for more info)
